src/tests/code/fail/fail_float_literal_parameter_type_mismatch.u
successor:(x:i64)->(x+1)

entrypoint:~()->(successor(3.14))